export more functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,14 @@ export(calculate_worm_pairs)
 export(create_contact_settings)
 export(create_mda)
 export(create_population_specified_ages)
+export(default_pars)
+export(generate_ages_and_deaths)
 export(get_dot_mean)
+export(make_age_contact_rate_array)
 export(run_repeated_sims_no_population_change)
 export(run_repeated_sims_no_population_change_increasing)
 export(schistox_setup)
+export(set_pars)
 export(update_contact_rate)
 export(update_env_constant_population)
 export(update_env_constant_population_increasing)
