--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(get_dot_mean)
 export(make_age_contact_rate_array)
 export(run_repeated_sims_no_population_change)
 export(run_repeated_sims_no_population_change_increasing)
+export(save_population_to_file)
 export(schistox_setup)
 export(set_pars)
 export(update_contact_rate)
