--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,9 @@ Description: More about what it does (maybe more than one line)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Imports:
+  JuliaCall,
+  testthat
 Suggests: 
     testthat
 RoxygenNote: 7.1.1
