update documents and description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,14 +4,11 @@ Title: What the Package Does (Title Case)
 Version: 0.1.0
 Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description:  An interface to 'Schistoxpkg.jl' <https://github.com/mattg3004/Schistoxpkg.jl> from the R programming language.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports:
   JuliaCall,
   testthat
-Suggests: 
-    testthat
 RoxygenNote: 7.1.1
