--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(create_mda)
 export(create_population_specified_ages)
 export(default_pars)
 export(generate_ages_and_deaths)
+export(get_data_from_record)
 export(get_dot_mean)
 export(make_age_contact_rate_array)
 export(run_repeated_sims_no_population_change)
