update parameters individually

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,3 +20,4 @@ export(update_contact_rate)
 export(update_env_constant_population)
 export(update_env_constant_population_increasing)
 export(update_parameters)
+export(update_parameters_individually)
