--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,12 +12,14 @@ export(get_data_from_record)
 export(get_dot_mean)
 export(make_age_contact_rate_array)
 export(run_repeated_sims_no_population_change)
+export(run_repeated_sims_no_population_change_human_larvae)
 export(run_repeated_sims_no_population_change_increasing)
 export(save_population_to_file)
 export(schistox_setup)
 export(set_pars)
 export(update_contact_rate)
 export(update_env_constant_population)
+export(update_env_constant_population_human_larvae)
 export(update_env_constant_population_increasing)
 export(update_parameters)
 export(update_parameters_individually)
