--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(default_pars)
 export(generate_ages_and_deaths)
 export(get_data_from_record)
 export(get_dot_mean)
+export(get_selected_data)
 export(make_age_contact_rate_array)
 export(run_repeated_sims_no_population_change)
 export(run_repeated_sims_no_population_change_human_larvae)
