add function to display parameter values

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(get_data_from_record)
 export(get_dot_mean)
 export(get_selected_data)
 export(make_age_contact_rate_array)
+export(parameter_value)
 export(run_repeated_sims_no_population_change)
 export(run_repeated_sims_no_population_change_human_larvae)
 export(run_repeated_sims_no_population_change_increasing)
