add extra data collection functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,10 @@ export(create_mda)
 export(create_population_specified_ages)
 export(default_pars)
 export(generate_ages_and_deaths)
-export(get_data_from_record)
+export(get_adult_data_from_record)
 export(get_dot_mean)
+export(get_pop_data_from_record)
+export(get_sac_data_from_record)
 export(get_selected_data)
 export(make_age_contact_rate_array)
 export(parameter_value)
