--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,3 +27,4 @@ export(update_env_constant_population_human_larvae)
 export(update_env_constant_population_increasing)
 export(update_parameters)
 export(update_parameters_individually)
+export(update_specified_parameters)
